--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0674d47456004c4492a51ec2ade5549d",
+       "model_id": "eab0567e9c724a4080ed34dae1b69c66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +68,7 @@
     "from ipywidgets import interact, interactive, fixed, interact_manual, HBox, Label\n",
     "import ipywidgets as widgets\n",
     "import xerox\n",
+    "import copy\n",
     "\n",
     "\n",
     "MEDIUM_SIZE = 16\n",
@@ -182,19 +183,10 @@
     "\n",
     "    sys[graphene.shape(circle, (0, 0))] = e    # Build scattering region\n",
     "    sys2[graphene.shape(circle, (0, 0))] = e\n",
-    "    sys3[graphene.shape(circle, (0, 0))] = e\n",
     "    sys[graphene.neighbors()] = t1 \n",
-    "    sys2[graphene.neighbors()] = t1\n",
-    "    sys3[graphene.neighbors()] = t1\n",
     "    if A!=180 or A==180 and S!=0:\n",
     "        sys.eradicate_dangling() #Delete dangling atoms before assigning more NN hopping terms\n",
     "        sys2.eradicate_dangling()\n",
-    "        sys3.eradicate_dangling()\n",
-    "    if H==2:\n",
-    "        sys2[graphene.neighbors(2)] = t2\n",
-    "    if H==3:\n",
-    "        sys2[graphene.neighbors(2)] = t2\n",
-    "        sys2[graphene.neighbors(3)] = t3\n",
     "    sites=list(sys.sites()) #Obtain list of sites for further use \n",
     "    #In the case of 120 degrees for wide ribbons, the scattering region overlaps with the leads, \n",
     "    #removing atoms outside the intended scattering region\n",
@@ -242,14 +234,6 @@
     "            else:\n",
     "                return -0.5 <= y <= 0.5+N and -5*sqrt(3)/2<=x<=-sqrt(3)/2\n",
     "    sys2[graphene.shape(lead_sites_left, (-sqrt(3)/2*D, 0))] = e    #adds the scattering centre lead sites\n",
-    "    sys2[graphene.neighbors()] = t1\n",
-    "    sys3[graphene.shape(lead_sites_left, (-sqrt(3)/2*D, 0))] = e\n",
-    "    sys3[graphene.neighbors()] = t1\n",
-    "    if H==2:\n",
-    "        sys2[graphene.neighbors(2)] = t2\n",
-    "    if H==3:\n",
-    "        sys2[graphene.neighbors(2)] = t2\n",
-    "        sys2[graphene.neighbors(3)] = t3 #adds hoppings between sites\n",
     "    #Adding lead cells to the other side, which is more tideous as the leads go in an angle and are not easy to specify\n",
     "    #hence we build a cell by indivudually placing atoms and then repeat the cell both lengthwise and widthwise\n",
     "    if A==120:\n",
@@ -326,81 +310,6 @@
     "                    else: \n",
     "                        del sys2[a(-3-(Z-1),4+2*(Z-1))]\n",
     "                        del sys2[b(-2-Z,3+2*Z)]\n",
-    "    #Repeat for sys3\n",
-    "    if A==120:\n",
-    "        for Z in range(3): #adds 3 unit cells\n",
-    "            sys3[a(1+1*Z,1+1*Z)]=e #manually adding an atom at specified coordinate with onsite potential of e\n",
-    "            sys3[a(1+1*Z,2+1*Z)]=e\n",
-    "            sys3[a(2+1*Z,1+1*Z)]=e\n",
-    "            sys3[b(1+1*Z,1+1*Z)]=e    \n",
-    "            sys3[b(2+1*Z,0+1*Z)]=e\n",
-    "            sys3[b(2+1*Z,1+1*Z)]=e\n",
-    "            if N>0: #Checking if widht>3\n",
-    "                N=int(N)\n",
-    "                for K in range(N): #Extra atoms added to account for width as original builds 3-AGNR leads\n",
-    "                    K=K+1\n",
-    "                    sys3[a(1+K+1*Z,1-K+1*Z)]=e #depending on the width parameter N, extend the lead widths\n",
-    "                    sys3[a(2+K+1*Z,1-K+1*Z)]=e \n",
-    "                    sys3[b(2+K+1*Z,1-K+1*Z)]=e\n",
-    "                    sys3[b(2+K+1*Z,0-K+1*Z)]=e\n",
-    "            if N==0:\n",
-    "                K=0\n",
-    "        if W % 2 == 0: #Checking if lead width is even, hence posibility of 2 chiralities \n",
-    "            #Need to compleatly rework the atom positions for one of the chiralities by manually adding/removing \n",
-    "            #atoms from the initial \"cell\"\n",
-    "            if F==0:\n",
-    "                del sys3[a(2+K,1-K)] #deleting a specific atom \n",
-    "                del sys3[a(3+K,2-K)]\n",
-    "                del sys3[b(3+K,1-K)]\n",
-    "                del sys3[a(4+K,3-K)]\n",
-    "                del sys3[b(4+K,2-K)]\n",
-    "                del sys3[a(2+K,2-K)]\n",
-    "                del sys3[a(3+K,3-K)]\n",
-    "                del sys3[b(2+K,1-K)]\n",
-    "                del sys3[b(3+K,2-K)]\n",
-    "                del sys3[b(4+K,3-K)]\n",
-    "                sys3[a(1,3)]=e\n",
-    "                sys3[a(2,4)]=e\n",
-    "                sys3[b(1,2)]=e\n",
-    "                sys3[a(3,4)]=e\n",
-    "                sys3[b(2,3)]=e\n",
-    "                sys3[b(3,4)]=e             \n",
-    "            if F==1:\n",
-    "                del sys3[a(2+K,1-K)]\n",
-    "                del sys3[a(3+K,2-K)]\n",
-    "                del sys3[b(3+K,1-K)]\n",
-    "                del sys3[a(4+K,3-K)]\n",
-    "                del sys3[b(4+K,2-K)]\n",
-    "    if A==60: #similar to 120 case\n",
-    "        for Z in range(3):\n",
-    "            sys3[a(-2-1*(Z-1),4+2*(Z-1))]=e\n",
-    "            sys3[a(-2-1*Z,3+2*Z)]=e\n",
-    "            sys3[a(-3-1*(Z-1),4+2*(Z-1))]=e\n",
-    "            sys3[b(-2-1*(Z-1),4+2*(Z-1))]=e    \n",
-    "            sys3[b(-2-1*Z,3+2*Z)]=e\n",
-    "            sys3[b(-1-1*Z,3+2*Z)]=e\n",
-    "            if N>0:\n",
-    "                N=int(N)\n",
-    "                for K in range(N):\n",
-    "                    K=K+1\n",
-    "                    sys3[a(-2+K-1*Z,3+2*Z)]=e\n",
-    "                    sys3[a(-2+K-1*(Z-1),4+2*(Z-1))]=e\n",
-    "                    sys3[b(-1+K-1*Z,3+2*Z)]=e    \n",
-    "                    sys3[b(-2+K-1*(Z-1),4+2*(Z-1))]=e\n",
-    "            if N==0:\n",
-    "                K=0\n",
-    "            if W % 2 == 0: \n",
-    "                #more streamlined process than the 120 case with less lines\n",
-    "                #to account for chiraliry of even width leads\n",
-    "                if F==0:\n",
-    "                    del sys3[a(-2-(Z-1)+K,4+2*(Z-1))]\n",
-    "                    del sys3[b(-1-Z+K,3+2*Z)]\n",
-    "                if F==1:\n",
-    "                    if Z==0:\n",
-    "                        del sys3[b(-2-Z,3+2*Z)]\n",
-    "                    else: \n",
-    "                        del sys3[a(-3-(Z-1),4+2*(Z-1))]\n",
-    "                        del sys3[b(-2-Z,3+2*Z)]\n",
     "\n",
     "    def lead_sites_right(pos): \n",
     "        #180 case allows us to build a simple function once again to add the leads sites to the\n",
@@ -416,15 +325,7 @@
     "        \n",
     "    if A==180:\n",
     "        sys2[graphene.shape(lead_sites_right, (D*sqrt(3),0.5+S))] = e\n",
-    "        sys3[graphene.shape(lead_sites_right, (D*sqrt(3),0.5+S))] = e\n",
     "        \n",
-    "    sys2[graphene.neighbors()] = t1\n",
-    "    sys3[graphene.neighbors()] = t1\n",
-    "    if H==2:\n",
-    "        sys2[graphene.neighbors(2)] = t2\n",
-    "    if H==3:\n",
-    "        sys2[graphene.neighbors(2)] = t2\n",
-    "        sys2[graphene.neighbors(3)] = t3\n",
     "############################### Lead building ###################################################\n",
     "    #Building the unit cell of the left lead, similar process to building the lead cells in\n",
     "    #scattering centre, but this time without specifying x component as it will be semi-infinite\n",
@@ -580,6 +481,16 @@
     "        lead1[graphene.neighbors(3)] = t3   \n",
     "    lead11[graphene.neighbors()] = t1\n",
     "    \n",
+    "    #Adding nearest neighbour hoppings for sys2 now\n",
+    "    \n",
+    "    sys2[graphene.neighbors()] = t1\n",
+    "    sys3=copy.deepcopy(sys2)\n",
+    "    if H==2:\n",
+    "        sys2[graphene.neighbors(2)] = t2\n",
+    "    if H==3:\n",
+    "        sys2[graphene.neighbors(2)] = t2\n",
+    "        sys2[graphene.neighbors(3)] = t3\n",
+    "\n",
     "    if A==120 and D==2: #depending on the angle/width attach the first lead to obtain correct display\n",
     "        sys2.attach_lead(lead0.reversed()) \n",
     "        sys.attach_lead(lead01.reversed())\n",
@@ -603,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,9 +684,9 @@
     "        t1=-2.77\n",
     "    if H==3:\n",
     "        t1=-2.78\n",
-    "    leads=perfect_system()\n",
+    "    leads, leads_plot=perfect_system()\n",
     "    ######Calculating the wave function in scattering center\n",
-    "    wf = kwant.solvers.default.wave_function(leads,energy=t1*(en+0.0001))\n",
+    "    wf = kwant.solvers.default.wave_function(leads_plot,energy=t1*(en+0.0001))\n",
     "    for i in range(len(wf(0))):  #Loop over all wfn modes\n",
     "        psi_l= wf(0)[i] #selecting the wfn incoming from left (0) and selecting the mode\n",
     "        amplitude=[]\n",
@@ -800,7 +711,7 @@
     "        ax1.set_yticks([])\n",
     "        ax1.set_aspect('equal','box')\n",
     "        ax1.set_title('Wavefunction, lead channel '+str(i+1)) \n",
-    "        kwant.plotter.plot(leads,site_size=amplitude/max(amplitude)/2.5,site_color=pha,lead_color='black',cmap=cmocean.cm.phase,fig_size=(10,5),colorbar=False,ax=ax1)\n",
+    "        kwant.plotter.plot(leads_plot,site_size=amplitude/max(amplitude)/2.5,site_color=pha,lead_color='black',cmap=cmocean.cm.phase,fig_size=(10,5),colorbar=False,ax=ax1)\n",
     "        azimuths = np.arange(0, 361, 1)\n",
     "        zeniths = np.arange(70, 100, 1)\n",
     "        values = azimuths * np.ones((30, 361))    \n",
@@ -816,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,11 +752,13 @@
     "    a, b = graphene.sublattices \n",
     "    xsym = kwant.TranslationalSymmetry([-sqrt(3),0])\n",
     "    leads = kwant.Builder() # Initialize system builder\n",
+    "    leads_plot= kwant.Builder() # Build a second lead (use deepcopy) to plot the WFN\n",
     "    def rec(pos):\n",
     "        x, y = pos\n",
     "        return -sqrt(3)<=x<=4*sqrt(3) and 0<=y<=(W-1)/2\n",
     "    leads[graphene.shape(rec, (0, 0))] = e    # Build scattering region\n",
     "    leads[graphene.neighbors()] = t1\n",
+    "    leads_plot=copy.deepcopy(leads)\n",
     "    if H==2:\n",
     "        leads[graphene.neighbors(2)] = t2\n",
     "    if H==3:\n",
@@ -861,6 +774,10 @@
     "    lead = kwant.Builder(kwant.TranslationalSymmetry([sqrt(3),0]))\n",
     "    lead[graphene.shape(lead_shape, (0,0))] = e\n",
     "    lead[graphene.neighbors()] = t1\n",
+    "    \n",
+    "    leads_plot.attach_lead(lead.reversed()) #Must attach leads to plotting system before 2NN and 3NN hoppings are assigned.\n",
+    "    leads_plot.attach_lead(lead)\n",
+    "    \n",
     "    if H==2:\n",
     "        lead[graphene.neighbors(2)] = t2\n",
     "    if H==3:\n",
@@ -870,13 +787,15 @@
     "    leads.attach_lead(lead.reversed()) #attach the leads\n",
     "    leads.attach_lead(lead)\n",
     "    \n",
+    "    leads_plot = leads_plot.finalized()\n",
     "    leads = leads.finalized() #finalize the system\n",
-    "    return leads"
+    "    return leads, leads_plot\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {
     "scrolled": false
    },
@@ -1136,7 +1055,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81cd2eb322b34dcb965c68ea373343ed",
+       "model_id": "dbf1aeb60f5d40bba08157d84d915e3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1150,7 +1069,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5883cd3507d84e8e950687fed3ba963b",
+       "model_id": "7197fafe6b274231a1547b55dce1b23d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1164,7 +1083,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "230c1ed1ecaa4f7485490c0ad3fccafe",
+       "model_id": "df38f1bc975e489aa1343e602509f82d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1215,13 +1134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cbf446d303e4de09fe8e99293bd52ab",
+       "model_id": "36b46418a1fc41d7840fceb8fa26ac7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1235,7 +1154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1ed9c6af3b84a1fbe4331b528a5836e",
+       "model_id": "4a64220149254d8b850cb41b6b9578bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1249,7 +1168,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9406f96a581457e8196636068dca758",
+       "model_id": "efd3cb97655e48e48203dc0ea6d35c50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1297,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {
     "scrolled": false
    },
@@ -1332,7 +1251,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dc9aa8bcbd244b1adff9155423315dd",
+       "model_id": "68af7403409e4938900ecdfb51b37076",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1347,6 +1266,13 @@
    "source": [
     "display(Single_en_at)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
