Energy range changes for calculate
Problem that the widget doesn't update automatically when changing NN models. Solution is to just include wider energy range, from -3 to 3.5t. 3.5t can be reached at 2NN and 3NN models.

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90d65f63a2a54968bc95fe31cc176a44",
+       "model_id": "a90cf67e011746d7a07eb8230cef3083",
        "version_major": 2,
        "version_minor": 0
       },
@@ -863,8 +863,8 @@
     "    if cutmin<0:  #some problem with 2nd/3rd NN model, where values smaller than -2.70 don't display because the cut value is negative /KRIS\n",
     "        cutmin=0\n",
     "    cutmax=int((Emax+abs(min_energies-0.3))*(3000/length)-1)\n",
-    "    if cutmax>2998:\n",
-    "        cutmax=2998\n",
+    "    if cutmax>2999: #Problem with 2nd/3rd NN model, only have 3k points so have to limit \n",
+    "        cutmax=2999\n",
     "    for i,energy in enumerate(energies):\n",
     "        if i%10==0:\n",
     "            progress.value=i/5 \n",
@@ -889,8 +889,10 @@
     "    ax2.set_xlabel(\"Energy (t)\")\n",
     "    ax2.set_ylabel(\"DOS\")\n",
     "    ax2.set_ylim(ymin=0)\n",
-    "    if max(dos)>100:\n",
-    "        ax2.set_ylim(ymax=100)\n",
+    "    if max(dos)>50:    #next two if statements take care of very large DOS values so that they are cut \n",
+    "        ax2.set_ylim(ymax=50)\n",
+    "    if max(perf_dos['arr_1'][cutmin:cutmax])>50:\n",
+    "        ax2.set_ylim(ymax=50)\n",
     "    ax2.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax2.xaxis.set_tick_params(rotation=90)\n",
     "    #rounding values\n",
@@ -1106,7 +1108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61cd51eabc7d4dfe8f542de9321c7f4f",
+       "model_id": "11aa30f048684c2bbc52db2ffa6d18c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1120,7 +1122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45d7572bec0a4f57a8c81aa6a004a74b",
+       "model_id": "f22dcc9a36d34684a613faf33d3de4ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1134,7 +1136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "342bbc8006ff46aaafffab96787a3242",
+       "model_id": "b1a1e431e1e14bbb9a782697fb029369",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1185,18 +1187,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5303617432364182aa4740ca0b502c67",
+       "model_id": "8642ab85fc504aaf8574c3060b4f78c6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=-3.4, description='Min Energy (t)', description_tooltip='Select the lo…"
+       "interactive(children=(FloatSlider(value=-3.0, description='Min Energy (t)', description_tooltip='Select the lo…"
       ]
      },
      "metadata": {},
@@ -1205,7 +1207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e05c7d48b5b41e2a25763f22de8be10",
+       "model_id": "e98de9eeb62b44969739870060ad5359",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1219,7 +1221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f05ab24f37e4b19a5e4be0d47052d80",
+       "model_id": "6590065934664865b53e3d1b8472ea9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1237,7 +1239,7 @@
     "progress=widgets.IntProgress(value=0,min=0,max=62,step=1,description='Progress:',bar_style='info',orientation='horizontal')\n",
     "progress.layout.visibility='hidden'\n",
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
-    "@interact_calc(Emin=widgets.FloatSlider(description_tooltip=\"Select the lowest energy of the desired range\",min=-3.4, max=3.4, step=0.1, value=-3.4, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3.4, max=3.4, step=0.1, value=3.4,description_tooltip=\"Select the highest energy of the desired range\",description=\"Max Energy (t)\",style=style))\n",
+    "@interact_calc(Emin=widgets.FloatSlider(description_tooltip=\"Select the lowest energy of the desired range\",min=-3, max=3.5, step=0.1, value=-3, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3, max=3.5, step=0.1, value=3.0,description_tooltip=\"Select the highest energy of the desired range\",description=\"Max Energy (t)\",style=style))\n",
     "def calculate_cond(Emin,Emax):\n",
     "    global fsys, energies, trans, dos\n",
     "    progress.layout.visibility=\"initial\" \n",
@@ -1301,7 +1303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd53af815e1b4b7abb9f2ff43367629d",
+       "model_id": "38f67ed45f6c44febd0cea1a5190bb81",
        "version_major": 2,
        "version_minor": 0
       },
