Remove sys2/sys3=builder
No need for the line as sys3 is copied afterwards, same for sys2. Same for the lead01 and lead11, only copy them.

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -158,8 +158,6 @@
     "#######################Building system##############################\n",
     "\n",
     "    sys = kwant.Builder() # System used for display of scattering region\n",
-    "    sys2= kwant.Builder() # System used for calculations\n",
-    "    sys3= kwant.Builder() # System used for display of LDOS and current\n",
     "    def circle(pos): #define the scattering region dimensions depending on angle\n",
     "        x, y = pos\n",
     "        if A==180: \n",
@@ -192,12 +190,9 @@
     "                return (x-3*sqrt(3)/6*N) ** 2 + (y+0.5*N) ** 2 <= r ** 2 and -(W-2)/2<=y<=(-2.01*x+c_y+2*c_x)\n",
     "\n",
     "    sys[graphene.shape(circle, (0, 0))] = e    # Build scattering region\n",
-    "    sys2[graphene.shape(circle, (0, 0))] = e\n",
     "    sys[graphene.neighbors()] = t1 \n",
-    "    sys2[graphene.neighbors()] = t1\n",
     "    if A!=180 or A==180 and S!=0:\n",
     "        sys.eradicate_dangling() #Delete dangling atoms before assigning more NN hopping terms\n",
-    "        sys2.eradicate_dangling()\n",
     "    sites=list(sys.sites()) #Obtain list of sites for further use \n",
     "    #In the case of 120 degrees for wide ribbons, the scattering region overlaps with the leads, \n",
     "    #removing atoms outside the intended scattering region\n",
@@ -213,7 +208,7 @@
     "                    del sys[a(atom[1][0],atom[1][1])] \n",
     "                else:\n",
     "                    del sys[b(atom[1][0],atom[1][1])] \n",
-    "\n",
+    "    sys2=copy.deepcopy(sys)   #system for calculations without the extra lead sites, but correct hopping            \n",
     "    def lead_sites_left(pos): \n",
     "    #defining a function to build the scattering center lead cells depending on angle\n",
     "    #simialr to scattering centre building previously\n",
@@ -337,6 +332,15 @@
     "    if A==180:\n",
     "        sys2[graphene.shape(lead_sites_right, (D*sqrt(3),0.5+S))] = e\n",
     "        \n",
+    "    #Adding nearest neighbour hoppings for sys2 and copying for sys3\n",
+    "    sys2[graphene.neighbors()] = t1\n",
+    "    sys3=copy.deepcopy(sys2)\n",
+    "    if H==2:\n",
+    "        sys2[graphene.neighbors(2)] = t2\n",
+    "    if H==3:\n",
+    "        sys2[graphene.neighbors(2)] = t2\n",
+    "        sys2[graphene.neighbors(3)] = t3\n",
+    "        \n",
     "############################### Lead building ###################################################\n",
     "    #Building the unit cell of the left lead, similar process to building the lead cells in\n",
     "    #scattering centre, but this time without specifying x component as it will be semi-infinite\n",
@@ -374,20 +378,16 @@
     "    lead0 = kwant.Builder(xsym) #starting the lead builder and specifying the symetry of semi-infinite direction\n",
     "    lead0[graphene.shape(lead0_shape, (0,0.25))] = e\n",
     "    lead0[graphene.neighbors()] = t1\n",
+    "    lead01=copy.deepcopy(lead0) #A lead purely for display purposes, only 1NN hoppings\n",
     "    if H==2:\n",
     "        lead0[graphene.neighbors(2)] = t2\n",
     "    if H==3:\n",
     "        lead0[graphene.neighbors(2)] = t2\n",
     "        lead0[graphene.neighbors(3)] = t3\n",
-    "\n",
-    "    lead01 = kwant.Builder(xsym) #A lead purely for display purposes\n",
-    "    lead01[graphene.shape(lead0_shape, (0,0.25))] = e\n",
-    "    lead01[graphene.neighbors()] = t1\n",
     "       \n",
     "    #Building the other lead at some angle. Specifying the lead cell by manually adding atoms, that\n",
     "    #have translational symetry ysym and will be basis of semi-infinite lead.\n",
     "    lead1 = kwant.Builder(ysym)\n",
-    "    lead11= kwant.Builder(ysym)#another lead purely for display purposes\n",
     "    def lead1_shape(pos):\n",
     "        x, y = pos\n",
     "        if W % 2 == 0:\n",
@@ -399,7 +399,6 @@
     "            return -0.5+S <= y <= 0.5+S+N\n",
     "    if A==180:\n",
     "        lead1[graphene.shape(lead1_shape, (0,0.5+S))] = e\n",
-    "        lead11[graphene.shape(lead1_shape, (0,0.5+S))] = e\n",
     "    if A==60:\n",
     "        lead1[a(-2,4)]=e\n",
     "        lead1[a(-2,3)]=e\n",
@@ -407,12 +406,6 @@
     "        lead1[b(-2,4)]=e    \n",
     "        lead1[b(-2,3)]=e\n",
     "        lead1[b(-1,3)]=e\n",
-    "        lead11[a(-2,4)]=e\n",
-    "        lead11[a(-2,3)]=e\n",
-    "        lead11[a(-3,4)]=e\n",
-    "        lead11[b(-2,4)]=e    \n",
-    "        lead11[b(-2,3)]=e\n",
-    "        lead11[b(-1,3)]=e\n",
     "        if N>0:\n",
     "            N=int(N)\n",
     "            for K in range(N):\n",
@@ -421,23 +414,15 @@
     "                lead1[a(-2+K,4)]=e\n",
     "                lead1[b(-1+K,3)]=e    \n",
     "                lead1[b(-2+K,4)]=e\n",
-    "                lead11[a(-2+K,3)]=e\n",
-    "                lead11[a(-2+K,4)]=e\n",
-    "                lead11[b(-1+K,3)]=e    \n",
-    "                lead11[b(-2+K,4)]=e\n",
     "        if N==0:\n",
     "            K=0\n",
     "        if W % 2 == 0:\n",
     "            if F==0:\n",
     "                del lead1[a(-2+K,4)]\n",
     "                del lead1[b(-1+K,3)]\n",
-    "                del lead11[a(-2+K,4)]\n",
-    "                del lead11[b(-1+K,3)]\n",
     "            if F==1:\n",
     "                del lead1[a(-3,4)]\n",
     "                del lead1[b(-2,3)]\n",
-    "                del lead11[a(-3,4)]\n",
-    "                del lead11[b(-2,3)]\n",
     "    if A==120:\n",
     "        lead1[a(1,2)]=e\n",
     "        lead1[a(2,1)]=e\n",
@@ -445,12 +430,6 @@
     "        lead1[b(2,2)]=e    \n",
     "        lead1[b(2,1)]=e\n",
     "        lead1[b(3,1)]=e\n",
-    "        lead11[a(1,2)]=e\n",
-    "        lead11[a(2,1)]=e\n",
-    "        lead11[a(2,2)]=e\n",
-    "        lead11[b(2,2)]=e    \n",
-    "        lead11[b(2,1)]=e\n",
-    "        lead11[b(3,1)]=e\n",
     "        if N>0:\n",
     "            N=int(N)\n",
     "            for K in range(N):\n",
@@ -459,10 +438,6 @@
     "                lead1[a(2+K,2-K)]=e  \n",
     "                lead1[b(2+K,1-K)]=e\n",
     "                lead1[b(3+K,1-K)]=e\n",
-    "                lead11[a(2+K,1-K)]=e\n",
-    "                lead11[a(2+K,2-K)]=e  \n",
-    "                lead11[b(2+K,1-K)]=e\n",
-    "                lead11[b(3+K,1-K)]=e\n",
     "        if N==0:\n",
     "            K=0\n",
     "        if W % 2 == 0:\n",
@@ -473,51 +448,34 @@
     "                del lead1[b(2+K,1-K)]\n",
     "                lead1[a(0,2)]=e\n",
     "                lead1[b(1,2)]=e \n",
-    "                del lead11[a(2+K,1-K)]\n",
-    "                del lead11[a(1+K,1-K)]\n",
-    "                del lead11[b(2+K,0-K)] \n",
-    "                del lead11[b(2+K,1-K)]\n",
-    "                lead11[a(0,2)]=e\n",
-    "                lead11[b(1,2)]=e \n",
     "            if F==1:\n",
     "                del lead1[a(2+K,1-K)]\n",
     "                del lead1[b(2+K,0-K)]\n",
-    "                del lead11[a(2+K,1-K)]\n",
-    "                del lead11[b(2+K,0-K)]\n",
     "    lead1[graphene.neighbors()] = t1\n",
+    "    lead11=copy.deepcopy(lead1) #A lead purely for display purposes, only 1NN hoppings    \n",
     "    if H==2:\n",
     "        lead1[graphene.neighbors(2)] = t2\n",
     "    if H==3:\n",
     "        lead1[graphene.neighbors(2)] = t2\n",
     "        lead1[graphene.neighbors(3)] = t3   \n",
-    "    lead11[graphene.neighbors()] = t1\n",
     "    \n",
-    "    #Adding nearest neighbour hoppings for sys2 now\n",
-    "    \n",
-    "    sys2[graphene.neighbors()] = t1\n",
-    "    sys3=copy.deepcopy(sys2)\n",
-    "    if H==2:\n",
-    "        sys2[graphene.neighbors(2)] = t2\n",
-    "    if H==3:\n",
-    "        sys2[graphene.neighbors(2)] = t2\n",
-    "        sys2[graphene.neighbors(3)] = t3\n",
     "\n",
     "    if A==120 and D==2: #depending on the angle/width attach the first lead to obtain correct display\n",
-    "        sys2.attach_lead(lead0.reversed()) \n",
     "        sys.attach_lead(lead01.reversed())\n",
+    "        sys2.attach_lead(lead0.reversed()) \n",
     "        sys3.attach_lead(lead01.reversed())\n",
     "    else:    \n",
-    "        sys2.attach_lead(lead0)\n",
     "        sys.attach_lead(lead01)\n",
+    "        sys2.attach_lead(lead0)\n",
     "        sys3.attach_lead(lead01)\n",
     "    if A==180: #depending on the angle attach 2nd lead for correct transitions\n",
     "        sys.attach_lead(lead11.reversed())\n",
-    "        sys3.attach_lead(lead11.reversed())\n",
     "        sys2.attach_lead(lead1.reversed())\n",
+    "        sys3.attach_lead(lead11.reversed())\n",
     "    else:\n",
     "        sys.attach_lead(lead11)\n",
-    "        sys3.attach_lead(lead11)\n",
     "        sys2.attach_lead(lead1)\n",
+    "        sys3.attach_lead(lead11)\n",
     "    #assigns global variables that are used for further calculations\n",
     "    return sys, sys2, sys3, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, Q, H, L, N\n",
     "\n"
