Removed hopping_lw
Function not utilised anywhere

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -487,12 +487,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hopping_lw(site1, site2): #Function defining the size of the edge lines connecting 1st, 2nd, and 3rd NN. \n",
-    "    if sqrt((site1.pos[0]-site2.pos[0])**2+(site1.pos[1]-site2.pos[1])**2)>0.8:\n",
-    "        edge_size=0.0001\n",
-    "    else:\n",
-    "        edge_size=0.1\n",
-    "    return edge_size"
+    "# def hopping_lw(site1, site2): #Function defining the size of the edge lines connecting 1st, 2nd, and 3rd NN. \n",
+    "#     if sqrt((site1.pos[0]-site2.pos[0])**2+(site1.pos[1]-site2.pos[1])**2)>0.8:\n",
+    "#         edge_size=0.0001\n",
+    "#     else:\n",
+    "#         edge_size=0.1\n",
+    "#     return edge_size"
    ]
   },
   {
