Changed band structure
Going from 0 to pi/a

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -483,20 +483,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def hopping_lw(site1, site2): #Function defining the size of the edge lines connecting 1st, 2nd, and 3rd NN. \n",
-    "#     if sqrt((site1.pos[0]-site2.pos[0])**2+(site1.pos[1]-site2.pos[1])**2)>0.8:\n",
-    "#         edge_size=0.0001\n",
-    "#     else:\n",
-    "#         edge_size=0.1\n",
-    "#     return edge_size"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -592,11 +578,12 @@
     "        ax.spines[\"bottom\"].set_visible(False)\n",
     "        #Add the band structure plotting here as we want them in the same figure for the web app    \n",
     "        momenta, energies = get_band(lead0)\n",
-    "        max_energies=np.amax(energies)\n",
+    "        max_energies=np.amax(energies)  #used to select the correct range for lead transmission/dos \n",
     "        min_energies=np.amin(energies)\n",
     "        ax2.plot(momenta, energies, c='black')\n",
-    "        ax2.set_xticks(np.arange(-1,1.1,1))\n",
-    "        ax2.set_xticklabels(['-π/a', '0', 'π/a'])\n",
+    "        ax2.set_xlim(0,1)\n",
+    "        ax2.set_xticks(np.arange(0,1.1,1))\n",
+    "        ax2.set_xticklabels(['0', 'π/a'])\n",
     "        ax2.set_title('Band structure of the leads')\n",
     "        ax2.set_xlabel(\"k-vector\")\n",
     "        ax2.set_ylabel(\"Energy (t)\")\n",
