--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -834,13 +834,13 @@
     "    ax2.set_xlabel(\"Energy (t)\")\n",
     "    ax2.set_ylabel(\"DOS\")\n",
     "    ax2.set_ylim(ymin=0)\n",
-    "    if max(dos)>50:    #next two if statements take care of very large DOS values so that they are cut \n",
+    "    if max(dos)>50:    #next two if statements take care of very large DOS values so that they are clipped \n",
     "        ax2.set_ylim(ymax=50)\n",
     "    if max(perf_dos['arr_1'][cutmin:cutmax])>50:\n",
     "        ax2.set_ylim(ymax=50)\n",
     "    ax2.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax2.xaxis.set_tick_params(rotation=90)\n",
-    "    #rounding values\n",
+    "    #rounding values for copy functionality\n",
     "    for i in range(len(energies)):\n",
     "        energies[i]=round(energies[i],4)\n",
     "        trans[i]=round(trans[i],4)\n",
@@ -866,7 +866,7 @@
     "    max_ldos=max(ldos)    \n",
     "    if max_ldos==0:\n",
     "        print (\"Please select another energy value as there are no bands at this energy\")\n",
-    "        return\n",
+    "        return #doesn't try to plot anythign\n",
     "    if max_ldos>0:\n",
     "        ldos=ldos/max(ldos)\n",
     "    plt.figure(figsize=(21,9), frameon=False)\n",
