--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -1194,7 +1194,7 @@
     "display(progress)#copy to clipboard functionality. Creates a button which copies the datasets. The data is organized into columns.\n",
     "#first column is energy, second is transmission, third is dos. Numbers are all rounded to 4 decimal places.\n",
     "empty_string=\"\"\n",
-    "copy_button = widgets.Button(description = \"Copy data\",tooltip='First column is Energy (t), second is Conductance (e\\N{SUPERSCRIPT TWO}/h), third is DOS')\n",
+    "copy_button = widgets.Button(description = \"Copy data\",tooltip='Click to copy the Energy, Conductance and DOS array to your clipboard')\n",
     "def copy_clip(b):\n",
     "    dataset=np.array([list([format(ints,'.4f') for ints in energies]), list([format(ints,'.4f') for ints in trans]), list([format(ints,'.4f') for ints in dos])]).T.tolist()\n",
     "    dataset_c=[]\n",
@@ -1206,7 +1206,7 @@
     "            empty_string=\"\\t\".join(dataset_c[0:3])\n",
     "        if i!=0:\n",
     "            empty_string=empty_string+\"\\n\"+\"\\t\".join(dataset_c[int(3*i):int(3*i+3)])\n",
-    "    xerox.copy(empty_string)\n",
+    "    xerox.copy(\"#Energy (t),Conductance (e\\N{SUPERSCRIPT TWO}/h),DOS\"+\"\\n\"+empty_string)\n",
     "copy_button.on_click(copy_clip)\n",
     "display(copy_button)"
    ]
